# NewInstall

./: .venv  Dockerfile  README.md  pyproject.toml  requirements.txt
brewbundle/: Brewfile
src/: main.py
zshrc_files/: defaultprofile.json  zshrc
